# aurora

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
compiler/: CMakeLists.txt
compiler/include/aurora/: AST.h  CodeGen.h  Colors.h  CrashHandler.h  Diagnostic.h  LanguageCore.h  Lexer.h  Logger.h  Parser.h  Type.h  Utils.h
compiler/src/: main.cpp
compiler/src/ast/: AST.cpp  ImplicitConstructor.cpp  ModuleLoader.cpp
compiler/src/codegen/: ArrayCodeGen.cpp  ClassCodeGen.cpp  CodeGen.cpp  ExprCodeGen.cpp  StmtCodeGen.cpp
compiler/src/core/: LanguageCore.cpp
compiler/src/diagnostic/: Diagnostic.cpp
compiler/src/lexer/: Lexer.cpp
compiler/src/logger/: Logger.cpp
compiler/src/parser/: Parser.cpp
compiler/src/types/: Type.cpp
compiler/src/utils/: CrashHandler.cpp  Utils.cpp
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  EXAMPLES.md  GETTING_STARTED.md  LANGUAGE_SPEC.md  OOP_FEATURES.md  ROADMAP.md  STDLIB_DESIGN.md  TUTORIAL.md
runtime/: CMakeLists.txt  aurora_runtime.c  aurora_runtime.h
runtime/include/: aurora_runtime.h
runtime/src/: aurora_runtime.c
stdlib/: CMakeLists.txt
stdlib/aurora/collections/: array.aur  array_utils.aur  bitwise.aur
stdlib/aurora/core/: assert.aur  conversion.aur  prelude.aur  range.aur
stdlib/aurora/math/: basic.aur  math.aur  trigonometry.aur
stdlib/aurora/string/: string_utils.aur
stdlib/include/aurorax/: StdLib.h
stdlib/src/: StdLib.cpp
tests/: README.md  lsp_test.aur  run_tests.sh
tests/arrays/: arrayBasic.aur  arrayComprehensive.aur
tests/basic/: exitCode.aur
tests/broken/: oopDemoBroken.aur  testBitwise.aur
tests/core/: basicSyntax.aur  controlFlow.aur  operators.aur  typeSystem.aur
tests/errors/: errorHandling.aur
tests/modules/: importSystem.aur  mathlib.aur  testImport.aur
tests/oop/: classesAndObjects.aur  designPatterns.aur  testAccessModifiers.aur
tests/stdlib/: testArrayUtils.aur  testMathComprehensive.aur  testRangeAndConversion.aur  testTrigonometry.aur
tools/aurora-cli/: CMakeLists.txt
tools/aurora-cli/src/: main.cpp
tools/aurora-lsp/: CMakeLists.txt
tools/aurora-lsp/include/: LSPHandlers.h  LSPProtocol.h  LSPServer.h
tools/aurora-lsp/src/: LSPHandlers.cpp  LSPProtocol.cpp  LSPServer.cpp  main.cpp
